--- a/.htaccess
+++ b/.htaccess
@@ -1,15 +1,25 @@
+# Enable Rewrite Engine
 RewriteEngine On
-RewriteCond %{REQUEST_URI} !^/public/
-RewriteRule ^(.*)$ public/$1 [L,QSA]
 
-# PHP handler for cPanel
-<IfModule mime_module>
-  AddHandler application/x-httpd-ea-php83 .php .php8 .phtml
-</IfModule>
+# Redirect all requests to /public/ folder
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(.*)$ public/$1 [L]
 
-# php -- BEGIN cPanel-generated handler, do not edit
-# Set the “ea-php82” package as the default “PHP” programming language.
+# If already in /public, don't redirect again
+RewriteRule ^public/.*$ - [L]
+
+# --- cPanel PHP Handler (Choose ONE version only) ---
+# Remove duplicate handlers, keep only your active PHP version
+
+# Example: If using PHP 8.2
 <IfModule mime_module>
   AddHandler application/x-httpd-ea-php82 .php .php8 .phtml
 </IfModule>
-# php -- END cPanel-generated handler, do not edit
+
+# OR: If using PHP 8.3 (uncomment below, remove above)
+# <IfModule mime_module>
+#   AddHandler application/x-httpd-ea-php83 .php .php8 .phtml
+# </IfModule>
+
+# php -- END cPanel-generated handler (do not edit below this line) --
