--- a/.htaccess
+++ b/.htaccess
@@ -1,25 +1,11 @@
-# Enable Rewrite Engine
+# Enable rewrite engine
 RewriteEngine On
 
-# Redirect all requests to /public/ folder
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ public/$1 [L]
+# Redirect all requests to /public folder
+RewriteCond %{REQUEST_URI} !^/project_insider/public/
+RewriteRule ^(.*)$ project_insider/public/$1 [L,QSA]
 
-# If already in /public, don't redirect again
-RewriteRule ^public/.*$ - [L]
-
-# --- cPanel PHP Handler (Choose ONE version only) ---
-# Remove duplicate handlers, keep only your active PHP version
-
-# Example: If using PHP 8.2
+# Handle PHP (use only one handler)
 <IfModule mime_module>
-  AddHandler application/x-httpd-ea-php82 .php .php8 .phtml
+  AddHandler application/x-httpd-ea-php83 .php .php8 .phtml
 </IfModule>
-
-# OR: If using PHP 8.3 (uncomment below, remove above)
-# <IfModule mime_module>
-#   AddHandler application/x-httpd-ea-php83 .php .php8 .phtml
-# </IfModule>
-
-# php -- END cPanel-generated handler (do not edit below this line) --
