--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-RewriteCond %{REQUEST_URI} !^/project_insider/public/ [NC]
+RewriteCond %{REQUEST_URI} !^/public/ [NC]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /project_insider/public/$1 [L,QSA]
+RewriteRule ^(.*)$ /public/$1 [L,QSA]
