--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,5 @@
 RewriteEngine On
-
-# Optional: redirect trailing slashes
-RewriteCond %{REQUEST_URI} /(.+)/$
+RewriteCond %{REQUEST_URI} !^/public/ [NC]
+RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ %1 [R=301,L]
-
-# Skip real files and directories
-RewriteCond %{REQUEST_FILENAME} -f [OR]
-RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^ - [L]
-
-# Route everything else to /public/
-RewriteRule ^(.*)$ public/$1 [L,QSA]
+RewriteRule ^(.*)$ /public/$1 [L,QSA]
