--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@stripe/stripe-js": "^8.2.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "embla-carousel-autoplay": "^8.6.0",
         "embla-carousel-react": "^8.6.0",
         "lucide-react": "^0.548.0",
         "react-hot-toast": "^2.6.0",
